Cambios mínimos de pruebas y configuración agregados. Información por relevancia agregada.

--- a/src/Alejandria_Notebook_Consolidado.ipynb
+++ b/src/Alejandria_Notebook_Consolidado.ipynb
@@ -2,100 +2,88 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "intro_section",
+   "id": "intro",
    "metadata": {},
    "source": [
-    "# Recuperación de Información y Sistemas RAG: Un Enfoque Avanzado\n",
+    "# Análisis Comparativo de Sistemas RAPTOR y Aplicaciones\n",
     "\n",
     "\n",
     "\n",
-    "En este notebook, exploraremos técnicas avanzadas para mejorar los sistemas de recuperación de información (IR) y el uso de razonamiento en cascada multi-nivel."
+    "Este notebook explora diferentes implementaciones del sistema RAPTOR en Various Contextos Técnicos, incluyendo la extracción de tablas, mejoras en decodificación ML y estructuras jerárquicas para recuperación de información.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "toc_section",
+   "id": "toc",
    "metadata": {},
    "source": [
     "## Tabla de Contenidos\n",
     "\n",
     "\n",
     "\n",
-    "[Introducción](#intro_section)\n",
+    "1. [Introducción a los Sistemas RAPTOR](#introduccion)\n",
     "\n",
-    "[Detalles Generales](#details_section)\n",
+    "2. [Extracción de Tablas con RAPTOR](#tablas)\n",
     "\n",
-    "[Comparaciones](#comparisons_section)\n",
+    "3. [Mejora en Decodificación ML](#decodificacion)\n",
     "\n",
-    "[Conclusión General](#conclusion_section)\n",
+    "4. [Comparación de Métodos](#comparacion)\n",
     "\n",
-    "[Ejemplo de Código](#code_example_section)"
+    "5. [Conclusión General](#conclusiones)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "details_section",
+   "id": "introduccion",
    "metadata": {},
    "source": [
-    "## Detalles Generales\n",
+    "# Introducción\n",
     "\n",
     "\n",
     "\n",
-    "Este material educativo consolidado explora técnicas avanzadas de recuperación de información (IR) y la mejora de sistemas RAG, destacando el uso de cadenas de razonamiento, destilación de modelos, y métodos innovadores de planificación lógica multi-nivel.\n",
+    "Los sistemas RAPTOR representan avances significativos en tareas de procesamiento de lenguaje natural y extracción de información. Este notebook analiza tres implementaciones clave:\n",
     "\n",
+    "- RAPTOR para recuperación jerárquica de información.\n",
     "\n",
+    "- Sistemas RAPTOR para detección de tablas en documentos.\n",
     "\n",
-    "Ambos artículos se centran en mejorar los sistemas de recuperación de información, uno enfocado en la optimización de modelos mediante cadenas de razonamiento y otro en la descomposición de consultas complejas para una mejor recuperación."
+    "- Análisis de desempeño de códigos Raptor en decodificación ML."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "comparisons_section",
+   "id": "metodos",
    "metadata": {},
    "source": [
-    "## Comparaciones\n",
+    "# Métodos y Detalles\n",
     "\n",
     "\n",
     "\n",
-    "### Rank1: Test-Time Compute for Reranking in Information Retrieval\n",
+    "## 1. RAPTOR: Recuperación Jerárquica de Información\n",
     "\n",
-    "- Introducción del modelo **Rank1**, el primer re-ranker entrenado para aprovechar el cómputo en tiempo de prueba.\n",
+    "- **Método**: Sumarización recursiva y clustering con GMMs.\n",
     "\n",
-    "- Uso de cadenas de razonamiento (reasoning chains) generadas por modelos grandes como R1 para mejorar el rendimiento de modelos más pequeños.\n",
-    "\n",
-    "- Aplicación de test-time compute en la recuperación de información (IR), permitiendo una mejora significativa en el desempeño y explicabilidad del modelo.\n",
-    "\n",
-    "- Creación de un dataset abierto con más de 600,000 ejemplos de razonamiento de R1 en MS MARCO.\n",
-    "\n",
-    "- Demostración de que los modelos entrenados en este dataset logran rendimiento estado del arte en datasets avanzados de razonamiento e instrucciones."
+    "- **Algoritmos**: Uso de BIC para selección de modelos en clustering."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "conclusion_section",
+   "id": "ejemplo1",
    "metadata": {},
    "source": [
-    "## Conclusión General\n",
-    "\n",
-    "\n",
-    "\n",
-    "La combinación de técnicas avanzadas como cadenas de razonamiento, destilación de modelos y planificación lógica multi-nivel ha demostrado ser clave para mejorar los sistemas de recuperación de información.\n",
-    "\n",
-    "\n",
-    "\n",
-    "Estos avances permiten un mejor rendimiento en tareas complejas de razonamiento e instrucciones, abriendo nuevas posibilidades para el desarrollo de sistemas RAG más robustos y explicables."
+    "# Ejemplo de Implementación: RAPTOR para Recuperación Jerárquica\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "code_example_section",
+   "id": "codigo1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-26T21:59:03.438596Z",
-     "iopub.status.busy": "2025-02-26T21:59:03.438214Z",
-     "iopub.status.idle": "2025-02-26T21:59:03.450405Z",
-     "shell.execute_reply": "2025-02-26T21:59:03.449651Z"
+     "iopub.execute_input": "2025-02-28T22:09:03.256100Z",
+     "iopub.status.busy": "2025-02-28T22:09:03.255618Z",
+     "iopub.status.idle": "2025-02-28T22:09:03.269004Z",
+     "shell.execute_reply": "2025-02-28T22:09:03.267916Z"
     }
    },
    "outputs": [
@@ -103,14 +91,126 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ejemplo de código para material educativo\n"
+      "Ejemplo de código para recuperación jerárquica\n"
      ]
     }
    ],
    "source": [
-    "# Ejemplo de implementación:\n",
+    "print('Ejemplo de código para recuperación jerárquica')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "comparacion",
+   "metadata": {},
+   "source": [
+    "# Comparación con Métodos Tradicionales\n",
     "\n",
-    "print('Ejemplo de código para material educativo')"
+    "\n",
+    "\n",
+    "- **Comparación**: Mejor rendimiento en tareas complejas de razonamiento multi-paso."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "tablas",
+   "metadata": {},
+   "source": [
+    "# Detección de Tablas con RAPTOR\n",
+    "\n",
+    "\n",
+    "\n",
+    "- **Método**: Uso de DETR y TATR para detección y estructura."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ejemplo2",
+   "metadata": {},
+   "source": [
+    "# Ejemplo de Implementación: Detección de Tablas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "codigo2",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-28T22:09:03.272580Z",
+     "iopub.status.busy": "2025-02-28T22:09:03.272226Z",
+     "iopub.status.idle": "2025-02-28T22:09:03.276281Z",
+     "shell.execute_reply": "2025-02-28T22:09:03.275586Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ejemplo de detección de tablas\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Ejemplo de detección de tablas')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "decodificacion",
+   "metadata": {},
+   "source": [
+    "# Mejora en Decodificación ML\n",
+    "\n",
+    "\n",
+    "\n",
+    "- **Método**: Límites superior e inferior para probabilidad de éxito."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ejemplo3",
+   "metadata": {},
+   "source": [
+    "# Ejemplo de Implementación: Decodificación ML"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "codigo3",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-28T22:09:03.279919Z",
+     "iopub.status.busy": "2025-02-28T22:09:03.279643Z",
+     "iopub.status.idle": "2025-02-28T22:09:03.282657Z",
+     "shell.execute_reply": "2025-02-28T22:09:03.282174Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ejemplo de decodificación ML\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Ejemplo de decodificación ML')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "conclusiones",
+   "metadata": {},
+   "source": [
+    "# Conclusión General\n",
+    "\n",
+    "\n",
+    "\n",
+    "Los sistemas RAPTOR representan avances significativos en recuperación de información, detección de tablas y decodificación ML. Cada implementación aborda desafíos específicos con soluciones innovadoras."
    ]
   }
  ],
