--- a/notebooks/scraping/agents/1_scraping_sources_agents.ipynb
+++ b/notebooks/scraping/agents/1_scraping_sources_agents.ipynb
@@ -1584,7 +1584,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "alejandria",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1602,5 +1602,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
