Cambios menores de compilado.

--- a/src/Alejandria_Notebook_Consolidado.ipynb
+++ b/src/Alejandria_Notebook_Consolidado.ipynb
@@ -5,11 +5,7 @@
    "id": "intro",
    "metadata": {},
    "source": [
-    "# Análisis Comparativo de Sistemas RAPTOR y Aplicaciones\n",
-    "\n",
-    "\n",
-    "\n",
-    "Este notebook explora diferentes implementaciones del sistema RAPTOR en Various Contextos Técnicos, incluyendo la extracción de tablas, mejoras en decodificación ML y estructuras jerárquicas para recuperación de información.\n"
+    "# Introducción a RAPTOR: Recursive Abstractive Processing for Tree-Organized Retrieval y Reconocimiento de Objetos en Tableros de Productos"
    ]
   },
   {
@@ -17,73 +13,77 @@
    "id": "toc",
    "metadata": {},
    "source": [
-    "## Tabla de Contenidos\n",
-    "\n",
-    "\n",
-    "\n",
-    "1. [Introducción a los Sistemas RAPTOR](#introduccion)\n",
-    "\n",
-    "2. [Extracción de Tablas con RAPTOR](#tablas)\n",
-    "\n",
-    "3. [Mejora en Decodificación ML](#decodificacion)\n",
-    "\n",
-    "4. [Comparación de Métodos](#comparacion)\n",
-    "\n",
-    "5. [Conclusión General](#conclusiones)"
+    "## Índice\n",
+    "1. Introducción\n",
+    "2. Tabla de Contenidos\n",
+    "3. Descripción Detallada de los Métodos\n",
+    "   - RAPTOR para Estructuras Jerárquicas\n",
+    "   - RAPTOR para Reconocimiento en Tableros de Productos\n",
+    "4. Comparaciones\n",
+    "5. Conclusiones\n",
+    "6. Ejemplo de Código"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "introduccion",
+   "id": "methods_detailed",
    "metadata": {},
    "source": [
-    "# Introducción\n",
-    "\n",
-    "\n",
-    "\n",
-    "Los sistemas RAPTOR representan avances significativos en tareas de procesamiento de lenguaje natural y extracción de información. Este notebook analiza tres implementaciones clave:\n",
-    "\n",
-    "- RAPTOR para recuperación jerárquica de información.\n",
-    "\n",
-    "- Sistemas RAPTOR para detección de tablas en documentos.\n",
-    "\n",
-    "- Análisis de desempeño de códigos Raptor en decodificación ML."
+    "## Descripción Detallada de los Métodos"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "metodos",
+   "id": "raptor_tree",
    "metadata": {},
    "source": [
-    "# Métodos y Detalles\n",
-    "\n",
-    "\n",
-    "\n",
-    "## 1. RAPTOR: Recuperación Jerárquica de Información\n",
-    "\n",
-    "- **Método**: Sumarización recursiva y clustering con GMMs.\n",
-    "\n",
-    "- **Algoritmos**: Uso de BIC para selección de modelos en clustering."
+    "### RAPTOR para Estructuras Jerárquicas\n",
+    "- **Procesamiento Recursivo y Abstractivo**: Aborda la recuperación de información en estructuras jerárquicas complejas.\n",
+    "- **Combina Análisis Top-Down con Generación Bottom-Up**: Permite extraer información relevante de árboles organizados."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ejemplo1",
+   "id": "raptor_product_tables",
    "metadata": {},
    "source": [
-    "# Ejemplo de Implementación: RAPTOR para Recuperación Jerárquica\n"
+    "### RAPTOR para Reconocimiento en Tableros de Productos\n",
+    "- **Aprendizaje Automático Avanzado**: Mejora significativa en detección y clasificación de objetos.\n",
+    "- **Detección de Bordes y Segmentación de Imágenes**: Útil para identificar productos en tableros."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "comparisons",
+   "metadata": {},
+   "source": [
+    "## Comparaciones\n",
+    "| Aspecto | RAPTOR para Jerarquías | RAPTOR para Tableros |\n",
+    "|---------|-----------------------|--------------------|\n",
+    "| Enfoque  | Procesamiento recursivo y abstractivo | Aprendizaje automático y detección de bordes |\n",
+    "| Uso     | Recuperación de info en árboles | Reconocimiento de objetos en imágenes |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "conclusions",
+   "metadata": {},
+   "source": [
+    "## Conclusiones\n",
+    "- Ambos métodos son innovadores y efectivos en sus respectivas aplicaciones.\n",
+    "- RAPTOR展示了在复杂结构和图像处理中的强大能力。"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "codigo1",
+   "id": "example_code",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-28T22:09:03.256100Z",
-     "iopub.status.busy": "2025-02-28T22:09:03.255618Z",
-     "iopub.status.idle": "2025-02-28T22:09:03.269004Z",
-     "shell.execute_reply": "2025-02-28T22:09:03.267916Z"
+     "iopub.execute_input": "2025-03-01T08:23:45.739501Z",
+     "iopub.status.busy": "2025-03-01T08:23:45.738707Z",
+     "iopub.status.idle": "2025-03-01T08:23:45.751424Z",
+     "shell.execute_reply": "2025-03-01T08:23:45.750733Z"
     }
    },
    "outputs": [
@@ -91,126 +91,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ejemplo de código para recuperación jerárquica\n"
+      "Ejemplo de código para material educativo\n"
      ]
     }
    ],
    "source": [
-    "print('Ejemplo de código para recuperación jerárquica')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "comparacion",
-   "metadata": {},
-   "source": [
-    "# Comparación con Métodos Tradicionales\n",
-    "\n",
-    "\n",
-    "\n",
-    "- **Comparación**: Mejor rendimiento en tareas complejas de razonamiento multi-paso."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "tablas",
-   "metadata": {},
-   "source": [
-    "# Detección de Tablas con RAPTOR\n",
-    "\n",
-    "\n",
-    "\n",
-    "- **Método**: Uso de DETR y TATR para detección y estructura."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ejemplo2",
-   "metadata": {},
-   "source": [
-    "# Ejemplo de Implementación: Detección de Tablas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "codigo2",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-02-28T22:09:03.272580Z",
-     "iopub.status.busy": "2025-02-28T22:09:03.272226Z",
-     "iopub.status.idle": "2025-02-28T22:09:03.276281Z",
-     "shell.execute_reply": "2025-02-28T22:09:03.275586Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ejemplo de detección de tablas\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('Ejemplo de detección de tablas')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "decodificacion",
-   "metadata": {},
-   "source": [
-    "# Mejora en Decodificación ML\n",
-    "\n",
-    "\n",
-    "\n",
-    "- **Método**: Límites superior e inferior para probabilidad de éxito."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ejemplo3",
-   "metadata": {},
-   "source": [
-    "# Ejemplo de Implementación: Decodificación ML"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "codigo3",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-02-28T22:09:03.279919Z",
-     "iopub.status.busy": "2025-02-28T22:09:03.279643Z",
-     "iopub.status.idle": "2025-02-28T22:09:03.282657Z",
-     "shell.execute_reply": "2025-02-28T22:09:03.282174Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ejemplo de decodificación ML\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('Ejemplo de decodificación ML')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "conclusiones",
-   "metadata": {},
-   "source": [
-    "# Conclusión General\n",
-    "\n",
-    "\n",
-    "\n",
-    "Los sistemas RAPTOR representan avances significativos en recuperación de información, detección de tablas y decodificación ML. Cada implementación aborda desafíos específicos con soluciones innovadoras."
+    "# Ejemplo de implementación:\n",
+    "print('Ejemplo de código para material educativo')"
    ]
   }
  ],
