notebook de prueba agregado

--- a/src/Alejandria_Notebook_Consolidado.ipynb
+++ b/src/Alejandria_Notebook_Consolidado.ipynb
@@ -5,7 +5,9 @@
    "id": "intro",
    "metadata": {},
    "source": [
-    "# Introducción a RAPTOR: Recursive Abstractive Processing for Tree-Organized Retrieval y Reconocimiento de Objetos en Tableros de Productos"
+    "# Introducción\n",
+    "\n",
+    "El presente notebook tiene como objetivo explorar y entender el sistema RAPTOR, enfocado en el procesamiento abstractivo recursivo para la recuperación organizada en árboles y su aplicación en el reconocimiento de objetos en tablas de productos."
    ]
   },
   {
@@ -13,43 +15,27 @@
    "id": "toc",
    "metadata": {},
    "source": [
-    "## Índice\n",
+    "## Tabla de Contenidos\n",
+    "\n",
     "1. Introducción\n",
-    "2. Tabla de Contenidos\n",
-    "3. Descripción Detallada de los Métodos\n",
-    "   - RAPTOR para Estructuras Jerárquicas\n",
-    "   - RAPTOR para Reconocimiento en Tableros de Productos\n",
-    "4. Comparaciones\n",
-    "5. Conclusiones\n",
-    "6. Ejemplo de Código"
+    "\n",
+    "2. Descripción Detallada de los Métodos\n",
+    "\n",
+    "3. Comparaciones\n",
+    "\n",
+    "4. Conclusión\n",
+    "\n",
+    "5. Ejemplo de Código"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "methods_detailed",
+   "id": "methods",
    "metadata": {},
    "source": [
-    "## Descripción Detallada de los Métodos"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "raptor_tree",
-   "metadata": {},
-   "source": [
-    "### RAPTOR para Estructuras Jerárquicas\n",
-    "- **Procesamiento Recursivo y Abstractivo**: Aborda la recuperación de información en estructuras jerárquicas complejas.\n",
-    "- **Combina Análisis Top-Down con Generación Bottom-Up**: Permite extraer información relevante de árboles organizados."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "raptor_product_tables",
-   "metadata": {},
-   "source": [
-    "### RAPTOR para Reconocimiento en Tableros de Productos\n",
-    "- **Aprendizaje Automático Avanzado**: Mejora significativa en detección y clasificación de objetos.\n",
-    "- **Detección de Bordes y Segmentación de Imágenes**: Útil para identificar productos en tableros."
+    "## Descripción Detallada de los Métodos\n",
+    "\n",
+    "El sistema RAPTOR utiliza un enfoque recursivo abstractivo para la recuperación organizada en árboles, mejorando la precisión en el reconocimiento de objetos en tablas de productos."
    ]
   },
   {
@@ -58,20 +44,18 @@
    "metadata": {},
    "source": [
     "## Comparaciones\n",
-    "| Aspecto | RAPTOR para Jerarquías | RAPTOR para Tableros |\n",
-    "|---------|-----------------------|--------------------|\n",
-    "| Enfoque  | Procesamiento recursivo y abstractivo | Aprendizaje automático y detección de bordes |\n",
-    "| Uso     | Recuperación de info en árboles | Reconocimiento de objetos en imágenes |\n"
+    "\n",
+    "Comparación con otros métodos existentes de reconocimiento de texto en imágenes (OCR): mejor rendimiento en precisión y eficiencia."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "conclusions",
+   "id": "conclusion",
    "metadata": {},
    "source": [
-    "## Conclusiones\n",
-    "- Ambos métodos son innovadores y efectivos en sus respectivas aplicaciones.\n",
-    "- RAPTOR展示了在复杂结构和图像处理中的强大能力。"
+    "## Conclusión\n",
+    "\n",
+    "El sistema RAPTOR demuestra ser un método versátil y eficiente para la recuperación organizada en árboles y el reconocimiento de objetos en tablas de productos."
    ]
   },
   {
@@ -80,10 +64,10 @@
    "id": "example_code",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-01T08:23:45.739501Z",
-     "iopub.status.busy": "2025-03-01T08:23:45.738707Z",
-     "iopub.status.idle": "2025-03-01T08:23:45.751424Z",
-     "shell.execute_reply": "2025-03-01T08:23:45.750733Z"
+     "iopub.execute_input": "2025-05-20T03:35:42.894672Z",
+     "iopub.status.busy": "2025-05-20T03:35:42.894543Z",
+     "iopub.status.idle": "2025-05-20T03:35:42.899397Z",
+     "shell.execute_reply": "2025-05-20T03:35:42.899141Z"
     }
    },
    "outputs": [
@@ -97,6 +81,7 @@
    ],
    "source": [
     "# Ejemplo de implementación:\n",
+    "\n",
     "print('Ejemplo de código para material educativo')"
    ]
   }
